faster_rcnn_end2end_ZF_.txt.2016-11-22_08-34-58
+ echo Logging output to experiments/logs/faster_rcnn_end2end_ZF_.txt.2016-11-22_08-34-58
Logging output to experiments/logs/faster_rcnn_end2end_ZF_.txt.2016-11-22_08-34-58
+ ./tools/train_net.py --gpu 0 --solver models/widerface/ZF/faster_rcnn_end2end/solver.prototxt --weights data/imagenet_models/ZF.v2.caffemodel --imdb widerface_2016_train --iters 350000 --cfg experiments/cfgs/faster_rcnn_end2end_widerface.yml
Traceback (most recent call last):
  File "./tools/train_net.py", line 15, in <module>
    from datasets.factory import get_imdb
  File "/disk2/workspace/github/ataraxia/faceX/py-faster-rcnn-zyf/tools/../lib/datasets/factory.py", line 14, in <module>
    from datasets.widerface import widerface
  File "/disk2/workspace/github/ataraxia/faceX/py-faster-rcnn-zyf/tools/../lib/datasets/widerface.py", line 205
    ix_cnt = 0
    ^
IndentationError: unexpected indent
